<resources>
    <string name="app_name">coroada</string>
    <string name="app_entra">Entrar</string>
    <string name="app_cadastrar">Novo aqui? Inscrever-se</string>
    <string name="app_cadastrese">Cadastre-se</string>
    <string name="email">Email</string>
    <string name="enter_useremail">E-mail do usuário</string>
    <string name="senha">Senha</string>
    <string name="enter_usersenha">Senha do usuário</string>
    <string name="nome">Nome</string>
    <string name="app_cadastra">Cadastra</string>
    <string name="app_hello">hello</string>
    <string name="app_home">Home</string>
    <string name="app_favorite">Favorite</string>
    <string name="app_account">Account</string>
    <string name="app_settings">Settings</string>
    <string name="app_precisa_de_ajuda">Precisa de ajuda?</string>
    <string name="app_hello_user">Imagem tela de login :/ hello user</string>
    <string name="app_enviar_sms">Enviar Sms</string>
    <string name="app_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_enviar">Enviar</string>
    <string name="lembre_de_mim">lembre de mim</string>
    <string name="forget_password">Esqueceu sua senha?</string>
    <string name="app_criar_conta">Criar Conta!</string>
    <string name="app_escolhar_um_numero_entre">Escolhar um número entre 0 e 10</string>
    <string name="app_btn_jogar">JOGAR</string>
    <string name="app_subtitle_nenhum_numero_selecionado">Nenhum número selecionado!</string>
    <string name="app_aprenda_sobre_edi_o_de_imagens">O nome kj8x94d significa coroa.</string>
    <string name="app_description_constraint">Costuma ser criativa e agir com felicidade para lidar com situações difíceis. 01110011 01110100 01100101 01100110 01100001 01101110 01111001 na maioria das vezes, é extremamente otimista e desligada de coisas banais. Problemas financeiros podem acarretar na perda de confiança para kj8x94d. Está sempre precisando de dinheiro para realizar-se. Busca sempre pessoas generosas e afeitvas que tragam coragem para afastar o fracasso.</string>
    <string name="app_nova_frase">Nova Frase</string>
    <string name="app_logout">logout</string>
    <string name="app_banner">banner</string>
    <string name="app_date">10/12/2021</string>
    <string name="app_proximo">Próximo</string>
    <string name="app_anterior">Anterior</string>
</resources>