<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stefany"
    android:padding="30dp"
    tools:context=".view.coronation.CoronationActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      tools:ignore="MissingConstraints">


    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_escolhar_um_numero_entre"
        android:textColor="@color/linda"
        android:textSize="14sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_btn_jogar"
        android:backgroundTint="@color/linda"
        android:background="@color/linda"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/labelSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/app_subtitle_nenhum_numero_selecionado"
        android:textColor="@color/linda"
        android:textSize="14sp"
        tools:ignore="MissingConstraints" />

  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>