<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/stefany"
android:padding="30dp"
tools:context=".Login">

<LinearLayout
    android:id="@+id/todoLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_login"
        android:textAllCaps="true"
        android:textColor="@color/linda"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_useremail"
            app:hintTextColor="@color/linda"
            app:boxStrokeColor="@color/linda"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/linda"
            app:endIconMode="clear_text"
            app:endIconTint="@color/linda">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_usersenha"
            app:hintTextColor="@color/linda"
            app:boxStrokeColor="@color/linda"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/linda"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/linda">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/linda"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/Lembre"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/linda"
                android:text="@string/lembre_de_mim"
                android:textColor="@color/linda"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_login"
            android:background="@color/linda"
            android:backgroundTint="@color/linda"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtCadastro"
            android:onClick="onClickCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/app_criar_conta"
            android:textColor="@color/linda"
            tools:ignore="OnClick" />
    </LinearLayout>

</LinearLayout>

</ScrollView>