<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_boots_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerCard"
        style="@style/ContainerCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/EditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableRight="@drawable/ic_email"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@id/containerCard"
        app:layout_constraintEnd_toEndOf="@id/containerCard"
        app:layout_constraintTop_toTopOf="@id/containerCard" />

    <EditText
        android:id="@+id/editSenha"
        style="@style/EditText"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_eye"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/containerCard"
        app:layout_constraintEnd_toEndOf="@id/containerCard"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrar"
        style="@style/Button"
        android:text="@string/app_entra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSenha"  />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/esbelta"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerCard"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/txtCadastro"
        android:onClick="onClickCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_cadastrar"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>